# ooyodo

./: .gitmodules  README.md  pyproject.toml  update_submodule.sh
.github/: data_update.yml
.github/workflows/: data_update.yml
data/: akashi_schedule.json  equipment_type_l10n.json  equipment_type_l10n_without_id.json  event_ship_tags.json  item_l10n.json  slotitem_l10n.json  slotitem_l10n_without_id.json  useitem_in_improve_l10n.json  version.json
game/: getData.json
script/: __init__.py  akashi_schedule.py  l10n.py  run.py  shiptag.py
