[tool.poetry]
name = "ooyodo"
version = "0.1.0"
description = "The Kancolle information data and API project."
authors = ["andy"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
kancolle = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
